data/derived/comb/progs/unify/prog5771.ml.out
Characters 212-214:
  else if  List.length l1 < List.length l2 then clone 0 ((List.length l2) - (List.length l1)) @ l1 @ [l2]
                                                                                                      ^^
Error: This expression has type 'a list
       but an expression was expected of type int
